EngineCore/include/EngineAPI.h

	/* ── opaque handle ─────────────────────────────────────────── */
	typedef void* EngineContextHandle;
	typedef void* (*WS_GetProcAddress)(const char*);
	/* ── entity handle ─────────────────────────────────────────── */
	typedef struct EntityId { uint32_t id; } EntityId;
	/// Performance metrics
	typedef struct {
		float avgFrameTime;
		float minFrameTime;
		float maxFrameTime;
		float avgFPS;
		int totalDrawCalls;
		int totalTriangles;
		long totalMemoryUsed;
		long peakMemoryUsed;
	} PerformanceMetrics;
	/// Profiling section result
	typedef struct {
		char name[64];
		float totalTime;
		float avgTime;
		float minTime;
		float maxTime;
		int callCount;
	} ProfileSection;
	/// Texture information
	typedef struct {
		int width;
		int height;
		int channels;
		int format;
		long memorySize;
		char path[256];
	} TextureInfo;
	/// Submit a custom rendering callback at the specified layer
	ENGINE_API void Render_SubmitCustom(
		EngineContextHandle ctx,
		void (*callback)(void* userData),  ///< Custom render function
		void* userData,                    ///< User data passed to callback
		int layer,                         ///< Render layer
		int order                          ///< Order within layer
	);
	/// Render frame to specific target (for embedded viewport)
	ENGINE_API void Engine_RenderToFramebuffer(EngineContextHandle ctx, uint32_t framebuffer, int width, int height);
	/// Draw debug rectangle in world space
	ENGINE_API void Engine_DrawDebugRect(EngineContextHandle ctx, float x, float y, float width, float height,
		float colorR, float colorG, float colorB, int filled);
	//=============================================================================
	// PERFORMANCE AND PROFILING
	//=============================================================================

	/// Get detailed performance metrics
	ENGINE_API void Engine_GetPerformanceMetrics(EngineContextHandle ctx, PerformanceMetrics* outMetrics);
	/// Start performance profiling section
	ENGINE_API void Engine_BeginProfileSection(EngineContextHandle ctx, const char* name);
	/// End performance profiling section
	ENGINE_API void Engine_EndProfileSection(EngineContextHandle ctx, const char* name);
	/// Get profiling results
	ENGINE_API int Engine_GetProfilingResults(EngineContextHandle ctx, ProfileSection* outSections, int maxSections);
	//=============================================================================
	// ASSET MANAGEMENT
	//=============================================================================

	/// Load texture and return handle
	ENGINE_API uint32_t Engine_LoadTexture(EngineContextHandle ctx, const char* path);
	/// Unload texture by handle
	ENGINE_API void Engine_UnloadTexture(EngineContextHandle ctx, uint32_t textureHandle);
	/// Get texture info
	ENGINE_API int Engine_GetTextureInfo(EngineContextHandle ctx, uint32_t textureHandle, TextureInfo* outInfo);
	/// Reload asset by path
	ENGINE_API int Engine_ReloadAsset(EngineContextHandle ctx, const char* path);
	//=============================================================================
	// ENTITY MANIPULATION
	//=============================================================================

	/// Clone entity with all components
	ENGINE_API EntityId Engine_CloneEntity(EngineContextHandle ctx, EntityId source);
	/// Move entity in hierarchy
	ENGINE_API int Engine_MoveEntityInHierarchy(EngineContextHandle ctx, EntityId entity, EntityId newParent, int siblingIndex);
	/// Get entity depth in hierarchy
	ENGINE_API int Engine_GetEntityDepth(EngineContextHandle ctx, EntityId entity);
	/// Check if entity is ancestor of another
	ENGINE_API int Engine_IsEntityAncestorOf(EngineContextHandle ctx, EntityId ancestor, EntityId descendant);
	//=============================================================================
// OPENGL CONTEXT AND FRAMEBUFFER MANAGEMENT
//=============================================================================

/// Initialize OpenGL context sharing with external context
	ENGINE_API int Engine_InitializeSharedGL(void* ctx, void* sharedContext);
	/// Create render target framebuffer with color and depth textures
	ENGINE_API uint32_t Engine_CreateRenderTarget(void* ctx, int width, int height,
		uint32_t* outColorTexture, uint32_t* outDepthTexture);
	/// Destroy render target and associated textures
	ENGINE_API void Engine_DestroyRenderTarget(void* ctx, uint32_t framebuffer,
		uint32_t colorTexture, uint32_t depthTexture);
	/// Resize render target framebuffer
	ENGINE_API int Engine_ResizeRenderTarget(void* ctx, uint32_t framebuffer,
		uint32_t colorTexture, uint32_t depthTexture, int newWidth, int newHeight);
	/// Set engine to render to specific framebuffer
	ENGINE_API void Engine_SetRenderTarget(void* ctx, uint32_t framebuffer, int width, int height);
	/// Restore default framebuffer (screen)
	ENGINE_API void Engine_RestoreDefaultFramebuffer(void* ctx);
	/// Render one frame to current render target
	ENGINE_API void Engine_RenderToTarget(void* ctx, void* nativeWindow, int width, int height);
	/// Render frame to specific framebuffer
	ENGINE_API void Engine_RenderToFramebuffer(void* ctx, uint32_t framebuffer, int width, int height);
	/// Blit framebuffer to screen or another framebuffer
	ENGINE_API void Engine_BlitFramebuffer(void* ctx, uint32_t srcFBO, uint32_t dstFBO,
		int srcX0, int srcY0, int srcX1, int srcY1,
		int dstX0, int dstY0, int dstX1, int dstY1, uint32_t mask, uint32_t filter);
	//=============================================================================
	// OPENGL STATE MANAGEMENT
	//=============================================================================

	/// Get current OpenGL context from engine
	ENGINE_API void* Engine_GetGLContext(void* ctx);
	/// Make engine's OpenGL context current
	ENGINE_API int Engine_MakeGLContextCurrent(void* ctx);
	/// Share OpenGL resources with external context
	ENGINE_API int Engine_ShareGLContext(void* ctx, void* externalContext);
	/// Sync OpenGL state between contexts
	ENGINE_API void Engine_SyncGLState(void* ctx);
	/// Get OpenGL texture handle from engine texture ID
	ENGINE_API uint32_t Engine_GetGLTextureHandle(void* ctx, uint32_t engineTextureId);
	//=============================================================================
	// TEXTURE MANAGEMENT
	//=============================================================================

	/// Create OpenGL texture with specific format
	ENGINE_API uint32_t Engine_CreateGLTexture(void* ctx, int width, int height,
		uint32_t internalFormat, uint32_t format, uint32_t type);
	/// Update texture data
	ENGINE_API void Engine_UpdateTextureData(void* ctx, uint32_t textureId,
		int width, int height, uint32_t format, uint32_t type, void* data);
	/// Get texture data (for readback)
	ENGINE_API int Engine_GetTextureData(void* ctx, uint32_t textureId,
		uint32_t format, uint32_t type, void* outData, int bufferSize);
	//=============================================================================
	// EDITOR-SPECIFIC RENDERING
	//=============================================================================

	/// Begin editor frame rendering
	ENGINE_API void Engine_BeginEditorFrame(void* ctx);
	/// End editor frame rendering
	ENGINE_API void Engine_EndEditorFrame(void* ctx);
	/// Set editor viewport transformation
	ENGINE_API void Engine_SetEditorViewport(void* ctx, int x, int y, int width, int height);
	/// Render scene with editor overlays
	ENGINE_API void Engine_RenderSceneWithOverlays(void* ctx);
	/// Check if engine supports external OpenGL context
	ENGINE_API int Engine_SupportsExternalGL(EngineContextHandle ctx);
	/// Get engine OpenGL capabilities as JSON string
	ENGINE_API int Engine_GetGLCapabilities(EngineContextHandle ctx, char* capabilities, int bufferSize);
	/// Validate that shared context is compatible
	ENGINE_API int Engine_ValidateSharedContext(EngineContextHandle ctx, EngineContextHandle externalContext);
	/// Get last OpenGL error from engine  
	ENGINE_API uint32_t Engine_GetLastGLError(EngineContextHandle ctx);
	/// Set engine to use immediate mode rendering (for fallback)
	ENGINE_API void Engine_SetImmediateModeRendering(EngineContextHandle ctx, int enabled);
	/// Check if engine is running in headless mode
	ENGINE_API int Engine_IsHeadless(EngineContextHandle ctx);
	ENGINE_API void Engine_BindOpenGLContext(WS_GetProcAddress getProc);
	ENGINE_API void Engine_RunInContext(void (*fn)(void*), void* user);