CSharp/ScriptHost/Interop/EngineInterop.cs


        /// <summary>
        /// Draw debug rectangle in world space
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_DrawDebugRect(IntPtr ctx, float x, float y, float width, float height,
            float colorR, float colorG, float colorB, int filled);

        #endregion

        #region Performance and Profiling

        /// <summary>
        /// Get detailed performance metrics
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetPerformanceMetrics(IntPtr ctx, out PerformanceMetrics metrics);

        /// <summary>
        /// Start performance profiling section
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_BeginProfileSection(IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string name);

        /// <summary>
        /// End performance profiling section
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_EndProfileSection(IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string name);

        /// <summary>
        /// Get profiling results
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetProfilingResults(IntPtr ctx, [Out] ProfileSection[] sections, int maxSections);

        #endregion

        #region Asset Management

        /// <summary>
        /// Load texture and return handle
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint Engine_LoadTexture(IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string path);

        /// <summary>
        /// Unload texture by handle
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_UnloadTexture(IntPtr ctx, uint textureHandle);

        /// <summary>
        /// Get texture info
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetTextureInfo(IntPtr ctx, uint textureHandle, out TextureInfo info);

        /// <summary>
        /// Reload asset by path
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_ReloadAsset(IntPtr ctx, [MarshalAs(UnmanagedType.LPStr)] string path);

        #endregion

        #region Entity Manipulation

        /// <summary>
        /// Clone entity with all components
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern EntityId Engine_CloneEntity(IntPtr ctx, EntityId source);

        /// <summary>
        /// Move entity in hierarchy
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_MoveEntityInHierarchy(IntPtr ctx, EntityId entity, EntityId newParent, int siblingIndex);

        /// <summary>
        /// Get entity depth in hierarchy
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetEntityDepth(IntPtr ctx, EntityId entity);

        /// <summary>
        /// Check if entity is ancestor of another
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_IsEntityAncestorOf(IntPtr ctx, EntityId ancestor, EntityId descendant);

        #endregion
        // Add these to your EngineInterop.cs class

        #region OpenGL Context and Framebuffer Management

        /// <summary>
        /// Initialize OpenGL context sharing with external context
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_InitializeSharedGL(IntPtr ctx, IntPtr sharedContext);

        /// <summary>
        /// Create render target framebuffer with color and depth textures
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint Engine_CreateRenderTarget(IntPtr ctx, int width, int height,
            out uint colorTexture, out uint depthTexture);

        /// <summary>
        /// Destroy render target and associated textures
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_DestroyRenderTarget(IntPtr ctx, uint framebuffer,
            uint colorTexture, uint depthTexture);

        /// <summary>
        /// Resize render target framebuffer
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_ResizeRenderTarget(IntPtr ctx, uint framebuffer,
            uint colorTexture, uint depthTexture, int newWidth, int newHeight);

        /// <summary>
        /// Set engine to render to specific framebuffer
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetRenderTarget(IntPtr ctx, uint framebuffer, int width, int height);

        /// <summary>
        /// Restore default framebuffer (screen)
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_RestoreDefaultFramebuffer(IntPtr ctx);

        /// <summary>
        /// Render one frame to current render target
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_RenderToTarget(IntPtr ctx, IntPtr nativeWindow, int width, int height);

        /// <summary>
        /// Render frame to specific framebuffer
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_RenderToFramebuffer(IntPtr ctx, uint framebuffer, int width, int height);

        /// <summary>
        /// Blit framebuffer to screen or another framebuffer
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_BlitFramebuffer(IntPtr ctx, uint srcFBO, uint dstFBO,
            int srcX0, int srcY0, int srcX1, int srcY1,
            int dstX0, int dstY0, int dstX1, int dstY1, uint mask, uint filter);

        #endregion

        #region OpenGL State Management

        /// <summary>
        /// Get current OpenGL context from engine
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Engine_GetGLContext(IntPtr ctx);

        /// <summary>
        /// Make engine's OpenGL context current
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_MakeGLContextCurrent(IntPtr ctx);

        /// <summary>
        /// Share OpenGL resources with external context
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_ShareGLContext(IntPtr ctx, IntPtr externalContext);

        /// <summary>
        /// Sync OpenGL state between contexts
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SyncGLState(IntPtr ctx);

        /// <summary>
        /// Get OpenGL texture handle from engine texture ID
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint Engine_GetGLTextureHandle(IntPtr ctx, uint engineTextureId);

        #endregion

        #region Texture Management

        /// <summary>
        /// Create OpenGL texture with specific format
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint Engine_CreateGLTexture(IntPtr ctx, int width, int height,
            uint internalFormat, uint format, uint type);

        /// <summary>
        /// Update texture data
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_UpdateTextureData(IntPtr ctx, uint textureId,
            int width, int height, uint format, uint type, IntPtr data);

        /// <summary>
        /// Get texture data (for readback)
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetTextureData(IntPtr ctx, uint textureId,
            uint format, uint type, IntPtr outData, int bufferSize);

        #endregion

        #region Editor-Specific Rendering

        /// <summary>
        /// Begin editor frame rendering
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_BeginEditorFrame(IntPtr ctx);

        /// <summary>
        /// End editor frame rendering
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_EndEditorFrame(IntPtr ctx);

        /// <summary>
        /// Set editor viewport transformation
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetEditorViewport(IntPtr ctx, int x, int y, int width, int height);

        /// <summary>
        /// Render scene with editor overlays
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_RenderSceneWithOverlays(IntPtr ctx);

        #endregion

        #region Headless Mode and Context Sharing Extensions

        /// <summary>
        /// Check if engine supports external OpenGL context
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_SupportsExternalGL(IntPtr ctx);

        /// <summary>
        /// Get engine OpenGL capabilities
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetGLCapabilities(IntPtr ctx, [Out] byte[] capabilities, int bufferSize);

        /// <summary>
        /// Validate that shared context is compatible
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_ValidateSharedContext(IntPtr ctx, IntPtr externalContext);

        /// <summary>
        /// Get last OpenGL error from engine
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint Engine_GetLastGLError(IntPtr ctx);

        /// <summary>
        /// Set engine to use immediate mode rendering (for fallback)
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_SetImmediateModeRendering(IntPtr ctx, int enabled);

        /// <summary>
        /// Check if engine is running in headless mode
        /// </summary>
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_IsHeadless(IntPtr ctx);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate IntPtr GetProcAddressDelegate(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string procName);

        // P/Invoke for Engine_BindOpenGLContext
        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_BindOpenGLContext(GetProcAddressDelegate getProc);

        #endregion
